<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/timer"
            android:icon="@drawable/ic_baseline_timer_24"
            android:title="@string/timer" />

        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_emergency_contacts"
            android:icon="@drawable/ic_baseline_contact_phone_24"
            android:title="@string/emergency_contacts" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us" />
    </group>

</menu>