<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".activity_register">



   <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="474dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editfname"
            android:layout_width="336dp"
            android:layout_height="49dp"
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editlname"
            android:layout_width="336dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editfname"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="336dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

        <EditText
            android:id="@+id/editconfirmPassword"
            android:layout_width="336dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/con_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />


        <EditText
            android:id="@+id/editstate"
            android:layout_width="336dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editconfirmPassword" />

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="336dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editlname" />


        <EditText
            android:id="@+id/editcity"
            android:layout_width="336dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/login_inputdesign"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editstate" />

        <Button
            android:id="@+id/button_emergency"
            android:layout_width="220sp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/side_nav_bar"
            android:hint="@string/button"
            android:onClick="button_register"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editcity"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="77dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/editlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>