<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:screenOrientation="portrait"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="235dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="86dp"
                android:layout_marginEnd="98dp"
                android:gravity="center"
                android:text="@string/Login"
                android:textDirection="firstStrong"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.069" />

            <RelativeLayout
                android:id="@+id/login_layout"
                android:layout_width="324dp"
                android:layout_height="381dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="189dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/login_box_design"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="282dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="89dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="10dp"
                    android:autofillHints=""
                    android:digits="0123456789+"
                    android:inputType="phone"
                    android:background="@drawable/login_inputdesign"
                    android:drawableStart="@drawable/login_input_text"
                    android:ems="10"
                    android:hint="@string/username_edit"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="193dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/username"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="293dp"
                    android:layout_height="41dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="147dp"
                    android:layout_marginEnd="19dp"
                    android:background="@drawable/login_inputdesign"
                    android:drawableStart="@drawable/login_inputdesign_password"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="97dp"
                    android:layout_height="57dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="226dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="28dp"
                    android:onClick="forgot_password"
                    android:text="@string/forgot_password"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/Login_button"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="102dp"
                    android:layout_marginTop="295dp"
                    android:layout_marginBottom="146dp"
                    android:background="@drawable/button_drawable"
                    android:gravity="center"
                    android:onClick="login_click"
                    android:text="@string/login"
                    android:textSize="23sp"
                    tools:ignore="OnClick" />

                <TextView
                    android:id="@+id/signupclick"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="228dp"
                    android:layout_marginEnd="-23dp"
                    android:layout_marginBottom="41dp"
                    android:layout_toStartOf="@+id/textView6"
                    android:focusable="true"
                    android:onClick="signup"
                    android:text="@string/signup"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="84dp"
                    android:layout_height="81dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="111dp"
                    android:layout_marginTop="197dp"
                    android:layout_marginEnd="130dp"
                    android:layout_marginBottom="103dp"
                    android:visibility="invisible" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>